# uruloki

./: package-lock.json
microservices/: docker-compose.yml
microservices/data-updater-node/: package-lock.json  package.json
microservices/data-updater-node-v2/: Dockerfile  package-lock.json  package.json  tsconfig.json
microservices/data-updater-node-v2/prisma/: schema.prisma
microservices/data-updater-node-v2/src/: g_queries.js  index.js
microservices/data-updater-node-v2/ts_src/: g_queries.ts  index.ts
microservices/data-updater-node/lib/: g_queries.ts  index.ts  types.ts
microservices/data-updater-node/prisma/: schema.prisma
microservices/process_orders/: .env.save  .gitignore  Dockerfile  package.json  tsconfig.json
microservices/process_orders/src/: index.ts  mysql.ts
microservices/token_info_rs/: Cargo.toml
microservices/token_info_rs/src/: main.rs
microservices/token_info_rs/src/query_builder/: mod.rs
microservices/token_info_rs/src/query_builder/queries/: mod.rs  top_gainers.rs
scripts/populate-test-data/prisma/: schema.prisma
tsuka-group-proj/: package-lock.json  package.json  tailwind.config.js
tsuka-group-proj/.storybook/: preview.ts
tsuka-group-proj/prisma/: schema.prisma
tsuka-group-proj/src/blockchain/: index.ts
tsuka-group-proj/src/components/: ToastProvider.tsx
tsuka-group-proj/src/helpers/: coin.helper.ts  fetch-testnet.ts  web3Modal.ts
tsuka-group-proj/src/lib/: orders.ts  setups.ts  token-activity-feed.ts  token-filter.ts  token-pair.ts  token-price.ts
tsuka-group-proj/src/pages/: _app.tsx  homepage.tsx  (+1 more)
(+154 files in other folders)
